--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,27 +90,31 @@ name: Recruitment4U Deployment
 on:
   push:
     branches:
-      - main # Trigger deployment on push to main branch
+      - main # Trigger deployment on push to the main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Setup Node.js
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: 🏗️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
           cache: "npm"
 
-      - name: Install dependencies
+      - name: 📦 Install Dependencies
         run: |
           npm cache clean --force
-          npm ci --legacy-peer-deps
+          npm install --legacy-peer-deps
           if [ $? -ne 0 ]; then
             echo "Dependency installation failed"
             exit 1
           fi
+
       - name: 🔨 Build Next.js App
         run: npm run build
 
@@ -124,7 +128,7 @@ jobs:
             package-lock.json
             public
             next.config.js
-            .env # Ensure your .env file is included (if applicable)
+            .env  # Ensure your .env file is included if needed
 
   deploy:
     needs: build
@@ -148,7 +152,38 @@ jobs:
           ssh-keyscan -H "$SSH_HOST" >> ~/.ssh/known_hosts
 
           echo "📂 Copying build files to the server..."
-          scp -i private_key.pem -r /tmp/recruitment4u "$SSH_USER@$SSH_HOST:/var/www/recruitment4u"
+          ssh -i private_key.pem "$SSH_USER@$SSH_HOST" << 'EOF'
+            set -e
+            APP_DIR="/var/www/recruitment4u"
 
-          echo "🔧 Connecting to server and setting up..."
-          ssh -i private_key.pem "$SSH_USER@$SSH_HOST" << '_
+            # Ensure directory exists
+            mkdir -p $APP_DIR
+
+            # Navigate to project directory
+            cd $APP_DIR
+
+            # Pull latest code
+            git pull origin main || true
+
+            # Copy build artifacts
+            rm -rf .next public next.config.js package.json package-lock.json
+            cp -r /tmp/recruitment4u/* $APP_DIR/
+
+            # Install dependencies
+            npm install --legacy-peer-deps
+
+            # Build Next.js app (optional, if not using pre-built artifacts)
+            npm run build
+
+            # Restart application with PM2
+            pm2 restart recruitment4u || pm2 start npm --name "recruitment4u" -- start
+
+            echo "✅ Deployment completed successfully!"
+          EOF
+
+      - name: 🧹 Cleanup
+        run: rm -f private_key.pem
+
+      - name: 🎉 Success Notification
+        run: |
+          echo "✅ Deployment completed successfully!"
